--- a/scipy/interpolate/meson.build
+++ b/scipy/interpolate/meson.build
@@ -103,13 +103,16 @@ interpnd = py3.extension_module('interpnd',
   install : true,
   subdir : 'scipy/interpolate')
 
-_ppoly = py3.extension_module('_ppoly',
-  ['_ppoly.pyx'],
-  c_args: numpy_nodepr_api,
-  include_directories: [incdir_numpy],
-  dependencies: [py3_dep],
-  install : true,
-  subdir : 'scipy/interpolate')
+# TODO: Depends on cython_lapack.pxd which cannot 
+# be added a dependency here. Once it is possible, 
+# uncomment the below part.
+# _ppoly = py3.extension_module('_ppoly',
+#  ['_ppoly.pyx'],
+#  c_args: numpy_nodepr_api,
+#  include_directories: [incdir_numpy],
+#  dependencies: [py3_dep],
+#  install : true,
+#  subdir : 'scipy/interpolate')
 
 _bspl = py3.extension_module('_bspl',
   ['_bspl.pyx'],
