--- a/scipy/ndimage/tests/meson.build
+++ b/scipy/ndimage/tests/meson.build
@@ -1,8 +1,5 @@
 python_sources = [
   '__init__.py',
-  'data/label_inputs.txt',
-  'data/label_results.txt',
-  'data/label_strels.txt',
   'test_datatypes.py',
   'test_fourier.py',
   'test_measurements.py',
@@ -18,4 +15,13 @@ py3.install_sources(
     python_sources,
     pure: false,
     subdir: 'scipy/ndimage/tests'
+)
+
+py3.install_sources(
+  ['data/label_inputs.txt',
+   'data/label_results.txt',
+   'data/label_strels.txt',
+  ],
+  pure: false,
+  subdir: 'scipy/ndimage/tests/data'
 )
