--- a/scipy/optimize/cython_optimize/meson.build
+++ b/scipy/optimize/cython_optimize/meson.build
@@ -1,9 +1,16 @@
-py3.install_sources(
-    ['__init__.py',
-     'c_zeros.pxd', 
-     '_zeros.pxd'],
-    pure: false,
-    subdir: 'scipy/optimize'
+# Needed to trick Cython, it won't do a relative import outside a package
+_dummy_init_cyoptimize = custom_target('_dummy_init_cyoptimize',
+  output : [
+    '__init__.py',
+    'c_zeros.pxd',
+    '_zeros.pxd',
+  ],
+  input : [
+    '__init__.py',
+    'c_zeros.pxd',
+    '_zeros.pxd',
+  ],
+  command : ['cp', '@INPUT@', '-t', '@OUTDIR@'],
 )
 
 # TODO: generated .pyx which has relative cimport in it doesn't work yet (see
@@ -15,8 +22,18 @@ _zeros_pyx = custom_target('_zeros_pyx',
  )
 
 _zeros = py3.extension_module('_zeros',
-   _zeros_pyx,
-   include_directories: ['.', inc_np],
+   [_zeros_pyx, _cython_tree, _dummy_init_optimize, _dummy_init_cyoptimize],
+   include_directories: inc_np,
    dependencies: [py3_dep],
    install: true,
-   subdir: 'scipy/optimize')
+   subdir: 'scipy/optimize/cython_optimize'
+)
+
+py3.install_sources(
+  ['__init__.py',
+   'c_zeros.pxd', 
+   '_zeros.pxd'],
+  pure: false,
+  subdir: 'scipy/optimize/cython_optimize'
+)
+
