--- a/scipy/stats/meson.build
+++ b/scipy/stats/meson.build
@@ -144,6 +144,24 @@ biasedurn = py3.extension_module('biasedurn',
   subdir: 'scipy/stats',
 )
 
+if use_pythran
+  _hypotests_pythran = custom_target('_hypotests_pythran',
+    output: ['_hypotests_pythran.cpp'],
+    input : '_hypotests_pythran.py',
+    command : [pythran, '-E', '@INPUT@', '-o', '@OUTDIR@/_hypotests_pythran.cpp'],
+  )
+  _group_columns = py3.extension_module('_hypotests_pythran',
+  _hypotests_pythran,
+  cpp_args: ['-Wno-unused-function', '-Wno-unused-variable',
+             '-Wno-deprecated-declarations', '-Wno-int-in-bool-context',
+            ] + cpp_args_pythran,
+  include_directories: [incdir_pythran, incdir_numpy],
+  dependencies: [py3_dep],
+  install: true,
+  subdir: 'scipy/stats')
+endif
+
+
 py3.install_sources([
   'qmc.py',
   '_distn_infrastructure.py',
