MAINT" Use `-Wunused-result`

--- a/scipy/sparse/linalg/dsolve/meson.build
+++ b/scipy/sparse/linalg/dsolve/meson.build
@@ -188,7 +188,7 @@ superlu_lib = static_library('superlu_lib',
     '-Wno-parentheses',
     '-Wno-unused-label',
     '-Wno-implicit-function-declaration',
-    '-Wno-switch'],
+    '-Wno-switch', '-Wunused-result'],
   include_directories: ['SuperLU/SRC'],
 )
 
